# a_c_compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: windows.yml
.github/workflows/: macosx.yml  ubuntu.yml
cmake/: FindFileCheck.cmake
doc/: flags.md
driver/: CMakeLists.txt
driver/include/a_c_compiler/driver/: command_line_options.inl.h
driver/sources/driver/: a_c_compiler.cpp
fe/: CMakeLists.txt
fe/include/a_c_compiler/fe/: a_c_compiler.h  version.h
fe/include/a_c_compiler/fe/lex/: lex.h
fe/include/a_c_compiler/fe/parse/: ast_module.h  parse.h  parser_diagnostic.h  parser_diagnostic_reporter.h  parser_diagnostic_reporter.template.h
fe/include/a_c_compiler/fe/reporting/: diagnostic_handles.h  logger.h
fe/sources/a_c_compiler/fe/lex/: lex.cpp
fe/sources/a_c_compiler/fe/parse/: ast_module.cpp  parse.cpp  parser_diagnostic.cpp
fe/sources/a_c_compiler/fe/reporting/: diagnostic_handles.cpp  logger.cpp
include/: CMakeLists.txt
include/a_c_compiler/global/: feature_flag.h  logger.h
include/a_c_compiler/lex/: lex.h  tokens.inl.h
include/a_c_compiler/parse/: ast_module.h  ast_node.h  parse.h  parser_diagnostic.h  parser_diagnostic.inl.h  parser_diagnostic_reporter.h  parser_diagnostic_reporter.template.h
lib/: CMakeLists.txt
lib/global/: feature_flag.cpp  logger.cpp
lib/lex/: lex.cpp
lib/parse/: ast_module.cpp  keywords.inl.h  parse.cpp
lib/tools/: CMakeLists.txt  a_c_compiler.cpp  command_line_options.inl.h
options/: CMakeLists.txt
options/include/a_c_compiler/options/: global_options.h
options/sources/: global_options.cpp
test/: CMakeLists.txt
test/file_check/: CMakeLists.txt
test/file_check/source/: main.cpp
test/lex/: CMakeLists.txt  keyword.c  main.c  numlit.c  strlit.c
test/parse/: CMakeLists.txt  attribute.c  funcdef.c  struct.c  typedef.c
